[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ur_gadget"
description = "Useful gadgets for your python projects"
version = "0.0.4"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
                "trafilatura"
                ]